ncc/testsuite/negative/fun-parm-count.n
// bug 598
def foo (  // E: function types only up to
  _x1, _x2, _x3, _x4, _x5, _x6, _x7, _x8, _x9, _x10,
  _y1, _y2, _y3, _y4, _y5, _y6, _y7, _y8, _y9, _y10,
  _z1, _z2, _z3, _z4, _z5, _z6, _z7, _z8, _z9, _z10)
{
}


_ = foo;
        
